--- a/Ekmek.UI/Views/Home/Details.cshtml
+++ b/Ekmek.UI/Views/Home/Details.cshtml
@@ -1,88 +1,90 @@
-﻿
+﻿@using Ekmek.UI.Entity;
+@model Product
 @{
     ViewBag.Title = "Details";
 }
+<div class="container mb-5">
 
-<div class="row mt-3">
-    <div class="col-md-6">
-        <img src="~/Content/img/Canon01.jpg" class="img-fluid w-100 rounded" alt="canon">
-    </div>
-    <div class="col-md-6">
-        <div class="row mt-1">
-            <div class="col-md-12">
-                <h1>Canon Camera #235135</h1>
-            </div>
+    <div class="row mt-3">
+        <div class="col-md-6">
+            <img src="~/Upload/img/@Model.Image" class="img-fluid w-100 rounded" alt="canon">
         </div>
-        <div class="row mt-1">
-            <div class="col-md-12">
-                <span class="badge badge-primary">In stock</span>
-                <span class="lproduct-number">#235135</span>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-md-12">
-                <div class="description">
-                    With supporting text below as a natural lead-in to additional With supporting text below as a natural lead-in to additional
-                    With supporting text below as a natural lead-in to additional.
+        <div class="col-md-6">
+            <div class="row mt-1">
+                <div class="col-md-12">
+                    <h1>@Model.ProductName</h1>
                 </div>
             </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col-md-4">
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star" aria-hidden="true"></i>
-                <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                <span class="badge badge-success">12</span>
-            </div>
-            <div class="col-md-4">
-                <a id="write-review" href="#">
-                    write a review
-                </a>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12">
-                <h4 class="product-price">3400 TL</h4>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col-md-12">
-                <button class="btn btn-success">
-                    <i class="fa fa-shopping-cart" aria-hidden="true"></i>
-                    Add to card
-                </button>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row mt-3">
-    <div class="col-md-12">
-        <div class="bd-example bd-example-tabs">
-            <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
-                <li class="nav-item">
-                    <a class="nav-link active" id="pills-Description-tab" data-toggle="pill" href="#pills-Description" role="tab" aria-controls="pills-Description" aria-selected="true">Description</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-Payment-tab" data-toggle="pill" href="#pills-Payment" role="tab" aria-controls="pills-Payment" aria-selected="false">Payment Methods</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" id="pills-Comments-tab" data-toggle="pill" href="#pills-Comments" role="tab" aria-controls="pills-Comments" aria-selected="false">Comments</a>
-                </li>
-            </ul>
-            <div class="tab-content" id="pills-tabContent">
-                <div class="tab-pane fade show active" id="pills-Description" role="tabpanel" aria-labelledby="pills-Description-tab">
-                    <p>Consequat occaecat ullamco amet non eiusmod nostrud dolore irure incididunt est duis anim sunt officia. Fugiat velit proident aliquip nisi incididunt nostrud exercitation proident est nisi. Irure magna elit commodo anim ex veniam culpa eiusmod id nostrud sit cupidatat in veniam ad. Eiusmod consequat eu adipisicing minim anim aliquip cupidatat culpa excepteur quis. Occaecat sit eu exercitation irure Lorem incididunt nostrud.</p>
+            <div class="row mt-1">
+                <div class="col-md-12">
+                    <span class="badge badge-primary">In stock</span>
+                    <span class="lproduct-number">#235135</span>
                 </div>
-                <div class="tab-pane fade" id="pills-Payment" role="tabpanel" aria-labelledby="pills-Payment-tab">
-                    <p>Ad pariatur nostrud pariatur exercitation ipsum ipsum culpa mollit commodo mollit ex. Aute sunt incididunt amet commodo est sint nisi deserunt pariatur do. Aliquip ex eiusmod voluptate exercitation cillum id incididunt elit sunt. Qui minim sit magna Lorem id et dolore velit Lorem amet exercitation duis deserunt. Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.</p>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-12">
+                    <div class="description">
+                        @Model.Description
+                    </div>
                 </div>
-                <div class="tab-pane fade" id="pills-Comments" role="tabpanel" aria-labelledby="pills-Comments-tab">
-                    <p>Est quis nulla laborum officia ad nisi ex nostrud culpa Lorem excepteur aliquip dolor aliqua irure ex. Nulla ut duis ipsum nisi elit fugiat commodo sunt reprehenderit laborum veniam eu veniam. Eiusmod minim exercitation fugiat irure ex labore incididunt do fugiat commodo aliquip sit id deserunt reprehenderit aliquip nostrud. Amet ex cupidatat excepteur aute veniam incididunt mollit cupidatat esse irure officia elit do ipsum ullamco Lorem. Ullamco ut ad minim do mollit labore ipsum laboris ipsum commodo sunt tempor enim incididunt. Commodo quis sunt dolore aliquip aute tempor irure magna enim minim reprehenderit. Ullamco consectetur culpa veniam sint cillum aliqua incididunt velit ullamco sunt ullamco quis quis commodo voluptate. Mollit nulla nostrud adipisicing aliqua cupidatat aliqua pariatur mollit voluptate voluptate consequat non.</p>
+            </div>
+            <div class="row mt-2">
+                <div class="col-md-4">
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star" aria-hidden="true"></i>
+                    <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                    <span class="badge badge-success">12</span>
+                </div>
+                <div class="col-md-4">
+                    <a id="write-review" href="#">
+                        write a review
+                    </a>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <h4 class="product-price">@Model.Price TL</h4>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-md-12">
+                    <button class="btn btn-success">
+                        <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                        Add to card
+                    </button>
                 </div>
             </div>
         </div>
     </div>
-</div>
+    <div class="row mt-3">
+        <div class="col-md-12">
+            <div class="bd-example bd-example-tabs">
+                <ul class="nav nav-tabs mb-3" id="pills-tab" role="tablist">
+                    <li class="nav-item">
+                        <a class="nav-link active" id="pills-Description-tab" data-toggle="pill" href="#pills-Description" role="tab" aria-controls="pills-Description" aria-selected="true">Description</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-Payment-tab" data-toggle="pill" href="#pills-Payment" role="tab" aria-controls="pills-Payment" aria-selected="false">Payment Methods</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" id="pills-Comments-tab" data-toggle="pill" href="#pills-Comments" role="tab" aria-controls="pills-Comments" aria-selected="false">Comments</a>
+                    </li>
+                </ul>
+                <div class="tab-content" id="pills-tabContent">
+                    <div class="tab-pane fade show active" id="pills-Description" role="tabpanel" aria-labelledby="pills-Description-tab">
+                        <p>@Model.Description - @Model.Price</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-Payment" role="tabpanel" aria-labelledby="pills-Payment-tab">
+                        <p>Ad pariatur nostrud pariatur exercitation ipsum ipsum culpa mollit commodo mollit ex. Aute sunt incididunt amet commodo est sint nisi deserunt pariatur do. Aliquip ex eiusmod voluptate exercitation cillum id incididunt elit sunt. Qui minim sit magna Lorem id et dolore velit Lorem amet exercitation duis deserunt. Anim id labore elit adipisicing ut in id occaecat pariatur ut ullamco ea tempor duis.</p>
+                    </div>
+                    <div class="tab-pane fade" id="pills-Comments" role="tabpanel" aria-labelledby="pills-Comments-tab">
+                        <p>Est quis nulla laborum officia ad nisi ex nostrud culpa Lorem excepteur aliquip dolor aliqua irure ex. Nulla ut duis ipsum nisi elit fugiat commodo sunt reprehenderit laborum veniam eu veniam. Eiusmod minim exercitation fugiat irure ex labore incididunt do fugiat commodo aliquip sit id deserunt reprehenderit aliquip nostrud. Amet ex cupidatat excepteur aute veniam incididunt mollit cupidatat esse irure officia elit do ipsum ullamco Lorem. Ullamco ut ad minim do mollit labore ipsum laboris ipsum commodo sunt tempor enim incididunt. Commodo quis sunt dolore aliquip aute tempor irure magna enim minim reprehenderit. Ullamco consectetur culpa veniam sint cillum aliqua incididunt velit ullamco sunt ullamco quis quis commodo voluptate. Mollit nulla nostrud adipisicing aliqua cupidatat aliqua pariatur mollit voluptate voluptate consequat non.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+</div>
